dati-semantic-csv-apis-data/deployment.yaml
#
# Deployment for the Dati Semantic Vocabularies API (controlled vocabularies).
#   see: https://github.com/teamdigitale/dati-semantic-csv-apis
#
# The configuration is provided via a ConfigMap (configmap-csv-api)
#
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dati-semantic-csv-apis-data
  name: dati-semantic-csv-apis-data
  namespace: ndc-dev
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: dati-semantic-csv-apis-data
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: dati-semantic-csv-apis-data
      name: dati-semantic-csv-apis-data
    spec:
      containers:
        - image: ghcr.io/teamdigitale/dati-semantic-csv-apis-data:20260511-78-1f5e9a7
          imagePullPolicy: Always
          name: dati-semantic-csv-apis-data
          workingDir: /data
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /data
          resources:
            limits:
              cpu: 1000m
              memory: 1024Mi
            requests:
              cpu: 250m
              memory: 512Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      volumes:
        - name: data
          emptyDir:
            sizeLimit: 1Gi
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 75
