dati-semantic-csv-apis-data/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: dati-semantic-csv-apis-data
  namespace: ndc-dev
  labels:
    app: dati-semantic-csv-apis-data
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: dati-semantic-csv-apis-data
  sessionAffinity: None
