dati-semantic-csv-apis-data/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: dati-semantic-csv-apis-data
  namespace: ndc-dev
  labels:
    application: dati-semantic-csv-apis-data
spec:
  host: vocabularies-ndc-dev.apps.cloudpub.testedev.istat.it
  to:
    kind: Service
    name: dati-semantic-csv-apis-data
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
status:
  ingress: []
